Update migration README with additional JVM flags for Flyway execution
- Add `-Dflyway.skipCheckForUpdate=true` to disable Flyway update check.
- Enable native access with `--enable-native-access=ALL-UNNAMED`.