@@ -9,7 +9,9 @@
 ```shell
 ./gradlew migration:clean migration:shadowJar
 
-java -jar migration/build/libs/migration-1.0.1-all.jar  \
+java -Dflyway.skipCheckForUpdate=true \
+  --enable-native-access=ALL-UNNAMED \
+  -jar migration/build/libs/migration-1.0.1-all.jar  \
   -url=jdbc:postgresql://localhost:15432/template \
   -user=myuser \
   -password=secret \
